fix: color contrast issue on links

--- a/src/templates/rule.scss
+++ b/src/templates/rule.scss
@@ -48,10 +48,9 @@
 		}
 		a.sc-item {
 			cursor: pointer;
-			text-decoration: none;
 			text-transform: capitalize;
 			&:hover {
-				color: $accent;
+				opacity: 0.9;
 			}
 			&.block {
 				display: block;
